<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"

    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:minHeight="?attr/actionBarSize"
        app:contentInsetStart="@dimen/set0dp">
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal">
    <ImageView
        android:id="@+id/backButton"
        android:layout_height="match_parent"
        android:layout_width="wrap_content"
        android:src="@drawable/icon_back">

    </ImageView>
            <TextView

                android:id="@+id/toolbar_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:paddingEnd="@dimen/set70dp"
                android:text="@string/login"
                android:textColor="@color/coffee"
                android:textSize="@dimen/set30sp">

            </TextView>
</LinearLayout>

    </androidx.appcompat.widget.Toolbar>

<!--    </android.support.v7.widget.Toolbar>-->

    <TextView
        android:layout_marginStart="@dimen/set30dp"
        android:layout_marginEnd="@dimen/set30dp"
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcomBack"
        android:textSize="@dimen/set40sp"
        android:textColor="@color/header"
        android:layout_marginTop="@dimen/set40dp"
        />
    <TextView
        android:id="@+id/textView3"
        android:layout_marginTop="@dimen/set50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="@dimen/set15sp"
        android:textColor="@color/hint"
        android:layout_marginStart="@dimen/set30dp"
        android:layout_marginEnd="@dimen/set30dp"
        />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/set30dp"
        android:layout_marginEnd="@dimen/set30dp"
        android:ems="10"
        android:backgroundTint="@color/coffee"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textSize="@dimen/set15sp"
        android:textColor="@color/hint"
        android:layout_marginStart="@dimen/set30dp"
        android:layout_marginEnd="@dimen/set30dp"
        android:layout_marginTop="@dimen/set20dp"
        />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:backgroundTint="@color/coffee"
        android:inputType="textPassword"
        android:layout_marginStart="@dimen/set30dp"
        android:layout_marginEnd="@dimen/set30dp"
        />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fpassword"
        android:layout_marginStart="@dimen/set30dp"
        android:layout_marginEnd="@dimen/set30dp"
        android:textAlignment="textEnd"
        android:layout_marginTop="@dimen/set20dp"/>
    <Button
        android:id="@+id/register_btn"
        android:textAllCaps="false"
        android:layout_width="match_parent"
        android:layout_height="@dimen/set60dp"
        android:layout_gravity="center"
        android:background="@drawable/registerbtn"
        android:text="@string/log_in"
        android:textColor="@color/white"
        android:textSize="@dimen/set15sp"
        android:layout_marginStart="@dimen/set30dp"
        android:layout_marginEnd="@dimen/set30dp"
        android:layout_marginTop="@dimen/set50dp"
        />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/noAcc"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/set30dp"
        android:textColor="@color/hint"/>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/set10dp"/>

</LinearLayout>